--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-3/ope04-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-3/ope04-3.component.html
@@ -1,167 +1,166 @@
 <div class="ui grid">
-  <div class="sixteen wide column">
-      <h2 class="ui header">สร้างกระดาษทำการตรวจนับวัตถุดิบคงเหลือ</h2>
+    <div class="sixteen wide column">
+        <h2 class="ui header">สร้างกระดาษทำการตรวจนับวัตถุดิบคงเหลือ</h2>
 
-      <div class="ui top attached header">
-          <span>Criteria</span>
-      </div>
+        <div class="ui top attached header">
+            <span>Criteria</span>
+        </div>
 
-      <form ngNativeValidate (submit)="onClickShow($event)">
-          <div class="ui attached segment">
-              <div class="ui form">
-                  <div class="inline fields">
-                      <div class="eight wide field ">
-                          <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
-                          <select class="ui search dropdown ope04-1" name="exciseId" id="exciseId" (change)="changeExiseId()" style="width: 100% !important">
+        <form ngNativeValidate (submit)="onClickShow($event)">
+            <div class="ui attached segment">
+                <div class="ui form">
+                    <div class="inline fields">
+                        <div class="eight wide field ">
+                            <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
+                            <select class="ui search dropdown ope04-1" name="exciseId" id="exciseId" (change)="changeExiseId()" style="width: 100% !important">
                         <option *ngFor="let list of exciseIdArr" value="{{list}}">{{list}}</option>
                     </select>
-                      </div>
-                      <div class="eight wide field ">
-                          <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
-                          <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="-">
-                      </div>
-                  </div>
+                        </div>
+                        <div class="eight wide field ">
+                            <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
+                            <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="-">
+                        </div>
+                    </div>
 
-                  <div class="inline fields">
-                      <div class="eight wide field">
-                          <label class="custom-label-w-25">ผู้ประกอบการ </label>
-                          <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" name="companyName" id="companyName" readonly="" value="{{firstDataList.companyName}}">
-                      </div>
-                      <div class="eight wide field ">
-                          <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
-                          <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" name="analysNumber" id="analysNumber" readonly="" value="{{firstDataList.analysNumber}}">
-                      </div>
-                  </div>
+                    <div class="inline fields">
+                        <div class="eight wide field">
+                            <label class="custom-label-w-25">ผู้ประกอบการ </label>
+                            <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" name="companyName" id="companyName" readonly="" value="{{firstDataList.companyName}}">
+                        </div>
+                        <div class="eight wide field ">
+                            <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
+                            <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" name="analysNumber" id="analysNumber" readonly="" value="{{firstDataList.analysNumber}}">
+                        </div>
+                    </div>
 
-                  <div class="inline fields">
-                      <div class="eight wide field">
-                          <label class="custom-label-w-25">ประเภท </label>
-                          <input type="text" class="custom-readonly" placeholder="ประเภท" readonly="" value="-">
-                      </div>
-                      <div class="eight wide field ">
-                          <label class="custom-label-w-20">พิกัด</label>
-                          <input type="text" class="custom-readonly" placeholder="พิกัด" name="productType" id="productType" readonly="" value="{{firstDataList.productType}}">
-                      </div>
-                  </div>
+                    <div class="inline fields">
+                        <div class="eight wide field">
+                            <label class="custom-label-w-25">ประเภท </label>
+                            <input type="text" class="custom-readonly" placeholder="ประเภท" readonly="" value="-">
+                        </div>
+                        <div class="eight wide field ">
+                            <label class="custom-label-w-20">พิกัด</label>
+                            <input type="text" class="custom-readonly" placeholder="พิกัด" name="productType" id="productType" readonly="" value="{{firstDataList.productType}}">
+                        </div>
+                    </div>
 
-                  <div class="inline fields">
-                      <div class="three wide field">
-                          <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
-                      </div>
-                      <div class="four wide field">
-                          <div class="ui calendar" id="calendarFront" style="width:100%">
-                              <div class="ui input left icon">
-                                  <i class="time icon"></i>
-                                  <input type="text" name="startDate" id="startDate" autocomplete="off" [attr.readonly]="null" placeholder="MM/YYYY" [attr.required]="true">
-                              </div>
-                          </div>
-                      </div>
-                      <div class="four wide field">
-                          <label>-</label>
-                          <div class="ui calendar" id="calendarLast" style="width:100%">
-                              <div class="ui input left icon">
-                                  <i class="time icon"></i>
-                                  <input type="text" name="endDate" id="endDate" autocomplete="off" [attr.readonly]="null" placeholder="MM/YYYY" [attr.required]="true">
-                              </div>
-                          </div>
-                      </div>
-                  </div>
+                    <div class="inline fields">
+                        <div class="three wide field">
+                            <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
+                        </div>
+                        <div class="four wide field">
+                            <div class="ui calendar" id="calendarFront" style="width:100%">
+                                <div class="ui input left icon">
+                                    <i class="time icon"></i>
+                                    <input type="text" name="startDate" id="startDate" autocomplete="off" [attr.readonly]="null" placeholder="MM/YYYY" [attr.required]="true">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="four wide field">
+                            <label>-</label>
+                            <div class="ui calendar" id="calendarLast" style="width:100%">
+                                <div class="ui input left icon">
+                                    <i class="time icon"></i>
+                                    <input type="text" name="endDate" id="endDate" autocomplete="off" [attr.readonly]="null" placeholder="MM/YYYY" [attr.required]="true">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-                  <br>
-                  <div class="ui center aligned grid">
-                      <div class="six wide column">
-                          <button class="ui mini primary button" type="submit">
+                    <br>
+                    <div class="ui center aligned grid">
+                        <div class="six wide column">
+                            <button class="ui mini primary button" type="submit">
               <i class="file icon"></i>
               แสดงกระดาษทำการ
             </button>
-                          <button class="ui mini button" type="reset">
+                            <button class="ui mini button" type="reset">
               <i class="close icon"></i>
               ยกเลิก
             </button>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
 
-      <div class="ui segment" id="showData">
-          <div class="ui grid center aligned">
-              <div class="sixteen wide column">
-                  {{firstDataList.companyName}}
-                  <br> กระดาษทำการตรวจนับวัตถุดิบคงเหลือ
-                  <br> เดือน {{startDate}} - {{endDate}}
-              </div>
-          </div>
-          <br>
-          <div style="overflow-x: scroll;">
-              <table class="ui small celled table" style="width: 120%;" id="showDt">
-                  <thead>
-                      <tr style="text-align: center;">
-                          <th>ลำดับ</th>
-                          <th>รายการ</th>
-                          <th></th>
-                          <th></th>
-                          <th>{{row[0].column6}}</th>
-                          <th>คงเหลือจากการตรวจนับ</th>
-                          <th>ค่าสูงสุดของข้อมูล</th>
-                          <th>ผลต่างของคู่ข้อมูล</th>
-                      </tr>
-                  </thead>
-              </table>
-          </div>
-          <br>
-          <div class="ui center aligned grid">
-              <div class="six wide column">
-                  <button class="ui mini primary button">
+        <div class="ui segment" id="showData">
+            <div class="ui grid center aligned">
+                <div class="sixteen wide column">
+                    {{firstDataList.companyName}}
+                    <br> กระดาษทำการตรวจนับวัตถุดิบคงเหลือ
+                    <br> เดือน {{startDate}} - {{endDate}}
+                </div>
+            </div>
+            <br>
+            <div style="overflow-x: scroll;">
+                <table class="ui small celled table" style="width: 120%;" id="showDt">
+                    <thead>
+                        <tr style="text-align: center;">
+                            <th>ลำดับ</th>
+                            <th>รายการ</th>
+                            <th>{{columnExcel1}}</th>
+                            <th>{{columnExcel2}}</th>
+                            <th>คงเหลือจากการตรวจนับ</th>
+                            <th>ผลต่างของข้อมูล 1</th>
+                            <th>ผลต่างของข้อมูล 2</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+            <br>
+            <div class="ui center aligned grid">
+                <div class="six wide column">
+                    <button class="ui mini primary button" (click)="saveTable()" type="button">
           <i class="print icon"></i>
           บันทึกข้อมูล
         </button>
-                  <button class="ui mini button" (click)="clearAll()" type="reset">
+                    <button class="ui mini button" (click)="clearAll()" type="reset">
           <i class="refresh icon"></i>
           ล้างข้อมูล
         </button>
-              </div>
-          </div>
-      </div>
+                </div>
+            </div>
+        </div>
 
-      <div class="ui top attached header">
-          <span>อัพโหลด Template ข้อมูลปริมาณการตรวจนับวัตถุดิบคงเหลือ</span>
-      </div>
+        <div class="ui top attached header">
+            <span>อัพโหลด Template ข้อมูลปริมาณการตรวจนับวัตถุดิบคงเหลือ</span>
+        </div>
 
-      <form id="upload-form" ngNativeValidate (submit)="onUpload($event)">
-          <div class="ui attached segment">
-              <div class="ui form">
-                  <div class="inline fields">
-                      <div class="eight wide field ">
-                          <label class="custom-label-w-25">เลือกไฟล์ Template ข้อมูล</label>
-                          <input type="file" name="fileExel" id="fileExel" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" (change)="onChangeUpload($event)" required>
-                      </div>
-                  </div>
-              </div>
+        <form id="upload-form" ngNativeValidate (submit)="onUpload($event)">
+            <div class="ui attached segment">
+                <div class="ui form">
+                    <div class="inline fields">
+                        <div class="eight wide field ">
+                            <label class="custom-label-w-25">เลือกไฟล์ Template ข้อมูล</label>
+                            <input type="file" name="fileExel" id="fileExel" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" (change)="onChangeUpload($event)" required>
+                        </div>
+                    </div>
+                </div>
 
-              <div class="ui center aligned grid">
-                  <div class="four wide column">
-                      <button class="ui mini primary button" type="submit">
+                <div class="ui center aligned grid">
+                    <div class="four wide column">
+                        <button class="ui mini primary button" type="submit">
                           <i class="upload icon"></i>
                           อัพโหลด
                       </button>
-                      <button class="ui mini button" type="reset">
+                        <button class="ui mini button" type="reset">
                           <i class="trash outline icon"></i>
                           ลบไฟล์
                       </button>
-                  </div>
-              </div>
-          </div>
-      </form>
+                    </div>
+                </div>
+            </div>
+        </form>
 
-      <br>
-      <div class="ui grid center aligned">
-          <div class="sixteen wide column">
-              <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
+        <br>
+        <div class="ui grid center aligned">
+            <div class="sixteen wide column">
+                <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
         <i class="arrow left icon"></i>
         ย้อนกลับ
       </button>
-          </div>
-      </div>
-  </div>
+            </div>
+        </div>
+    </div>
 </div>
