--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.html
@@ -103,21 +103,25 @@
 
             <div class="ui grid" style="margin-top: 0">
                 <div class="three wide column" style="padding-right: 0;">
-                    <div class="ui vertical menu" style="width: auto">
+                    <div class="ui vertical menu" style="width: auto" name="coordinates" id="coordinates" (change)="changeCoordinates()">
                         <div class="item">
                             <div class="header">แยกข้อมูลตามกลุ่มของการชำระภาษี</div>
                         </div>
                         <div class="item">
-                            <div class="menu" *ngFor="let num of _num1; let i = index">
-                                <a class="item">-เงื่อนไขที่ {{i+1}}</a>
-                            </div>
-                        </div>
-                        <div class="item">
                             <div class="menu">
-                                <a class="item">-รวมทุกเงื่อนไข</a>
-                                <a class="item">-รายที่ไม่อยู่ในเงื่อนไข</a>
+                                <div class="menu">
+                                    <a class="item hover {{(( _num1.length>1)&&(indexFilter === '')) && 'active'}}" *ngIf="_num1.length>1" (click)="filterAllDataByCriteria()">-
+                                        เงื่อนไขทั้งหมด
+                                    </a>
+                                </div>
+                                <div *ngFor="let num of _num1; let i = index" (click)="filterDataByCriteria(i)">
+                                    <a class="item">-เงื่อนไขที่ {{i+1}}</a>
+                                </div>
+                                <a class="item" (click)="FlagN()">-รายที่ไม่อยู่ในเงื่อนไข</a>
                             </div>
+
                         </div>
+
                     </div>
                 </div>
 
@@ -141,7 +145,8 @@
                                     <th rowspan="2" style="text-align: center !important">ทุนจดทะเบียน</th>
                                     <th rowspan="2" style="text-align: center !important">สถานะ/วันที่</th>
                                     <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนแรก</th>
-                                    <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนหลัง </th>
+                                    <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนหลัง
+                                    </th>
                                     <th rowspan="2" style="text-align: center !important">เพิ่มข้อมูลภายนอก</th>
                                 </tr>
                                 <tr>
