--- a/workspace/ims-client/src/app/app.component.css
+++ b/workspace/ims-client/src/app/app.component.css
@@ -14,6 +14,14 @@
   box-sizing: border-box;
 }
 
+.main.container-fluid {
+  min-height: 100%;
+  margin: 0 1em;
+  padding-top: calc(6em + 10px);
+  padding-bottom: calc(60px + 10px);
+  box-sizing: border-box;
+}
+
 .wireframe {
   margin-top: 2em;
 }
