--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -252,7 +252,7 @@
     </div>
 </div>
 
-<div class="ui main {{loading&& 'blurring'}} container ">
+<div class="ui main {{loading ? 'blurring' : ''}} container-fluid ">
     <div class="ui active inverted dimmer " style="margin-top: 5em; " *ngIf="loading ">
         <div class="ui text loader ">กำลังโหลด...</div>
     </div>
