--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-1/cop01-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-1/cop01-1.component.html
@@ -1,209 +1,249 @@
 <div class="ui grid">
-  <div class="sixteen wide column">
-    <h2 class="ui header">จัดทำแผนการตรวจปฏิบัติการ</h2>
-
-    <div class="ui top attached header">
-      <span>จัดทำแผนการตรวจปฏิบัติการ</span>
-
-    </div>
-
-    <div class="ui attached segment">
-
-      <div class="ui form">
-        <div class="inline fields">
-          <div class="three wide field ">
-            <label>แผนตรวจปฏิบัติการเลขที่ :</label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="61-00187">
-          </div>
-          <div class="two hree wide field "> </div>
-          <div class="three wide field">
-            <label>วันที่จัดทำแผน :</label>
-          </div>
-          <div class="four ui action input">
-            <input type="text" placeholder="dd/mm/yyyy">
-            <button class="ui icon button">
-              <i class="add to calendar icon"></i>
-            </button>
-          </div>
+    <div class="sixteen wide column">
+        <h2 class="ui header">จัดทำแผนการตรวจปฏิบัติการ</h2>
+        <div class="ui top attached header">
+            <span>จัดทำแผนการตรวจปฏิบัติการ</span>
         </div>
-        <br>
-        <div class="ui grid center aligned">
-          <div class="sixteen wide column">
-            <b> แผนปฏิบัติการ ประจำปีงบประมาณ พ.ศ. 2561</b>
-          </div>
-        </div>
-        <br>
+        <div class="ui attached segment">
+            <div class="ui form">
 
-        <div class="inline fields">
-          <div class="three wide field ">
-            <label>เป้าหมายกระทรวงการคลัง :</label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="การรักษาความยั่งยืนทางการคลัง">
-          </div>
-          <div class="two wide field "> </div>
-          <div class="three wide field ">
-            <label>ผู้รับผิดชอบหลัก : </label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="">
-          </div>
-        </div>
+                <div class="inline fields ">
+                    <div class="one wide field "> </div>
+                    <div class="three wide field ">
+                        <label>แผนตรวจปฏิบัติการเลขที่ :</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" placeholder="" value="" class="custom-readonly">
+                    </div>
+                    <div class="one wide field "> </div>
+                    <div class="three wide field">
+                        <label>วันที่จัดทำแผน :</label>
+                    </div>
+                    <div class="four wide field ">
+                        <div class="ui input left icon">
+                            <i class="time icon"></i>
+                            <input type="text" id="date3" class="custom-readonly">
+                        </div>
+                    </div>
+                </div>
 
-        <div class="inline fields">
-          <div class="three wide field ">
-            <label>ยุทธศาสตร์กระทรวงการคลัง : </label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="การปฏิรูปกฏหมายการคลังและการบริหารการคลัง ">
-          </div>
-          <div class="two  wide field "> </div>
-          <div class="three  wide field ">
-            <label>ชื่อ :</label>
-          </div>
+                <br>
 
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="นางสุภา เยี่ยมโอภาส">
-          </div>
-        </div>
+                <div class="ui grid center aligned">
+                    <div class="sixteen wide column">
+                        <b id="planName" name="planName" >{{planName}}</b>
+                    </div>
+                </div>
 
-        <div class="inline fields">
-          <div class="three wide field ">
-            <label>ยุทธศาสตร์กรมสรรพสามิต : </label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="บูรณาการการจัดเก็บภาษีอย่างมีเสถียรภาพ">
+                <br>
 
-          </div>
-          <div class="two wide field "> </div>
-          <div class="three wide field ">
-            <label>ตำแหน่ง : </label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="นักวิชาการสรรพสามิตชำนสญการพิเศษ">
-          </div>
-        </div>
+                <div class="inline fields">
+                    <div class="one wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>เป้าหมายกระทรวงการคลัง :</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" placeholder="" class="custom" name="minisFinanceTarget" id="minisFinanceTarget" [(ngModel)]="minisFinanceTarget">
+                    </div>
+                    <div class="one wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>ยุทธศาสตร์กระทรวงการคลัง :</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" placeholder="" class="custom" name="minisFinanceStrat" id="minisFinanceStrat" [(ngModel)]="minisFinanceStrat">
+                    </div>
+                </div>
 
-        <div class="inline fields">
-          <div class="three wide field ">
-            <label>กลยุทธ์ :</label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="จัดเก็บภาษีเพื่อฐานะทางการคลังอย่างยั่งยืน">
-          </div>
-          <div class="two wide field "> </div>
-          <div class="three wide field ">
-            <label>ผู้อนุมัติ :</label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="นักวิชาการสรรพสามิตชำนสญการพิเศษ">
-          </div>
-        </div>
+                <div class="inline fields">
+                    <div class="one wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>ยุทธศาสตร์กรมสรรพสามิต :</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" placeholder="" class="custom" name="minisFinanceExcise" id="minisFinanceExcise" [(ngModel)]="minisFinanceExcise">
+                    </div>
+                    <div class="one wide field "> </div>
+                    <div class="three  wide field required field">
+                        <label>กลยุทธ์ :</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" placeholder="" class="custom" name="strategy" id="strategy" [(ngModel)]="strategy">
+                    </div>
+                </div>
 
-        <div class="inline fields">
-          <div class="three wide field ">
-            <label>วัตถุประสงค์ : </label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="เพื่อเพิ่มพูนประสิทธิภาพในการบริหารการจัดเก็บภาษี ">
+                <div class="inline fields" *ngFor="let num of numbers; let i = index" [attr.data-index]="i">
+                    <div class="one wide field "></div>
+                    <div class="three wide field ">
+                        <label>วัตถุประสงค์&nbsp;&nbsp;{{i+1}} : </label>
+                    </div>
+                    <div class="eleven wide field">
+                        <input type="text" placeholder="" class="custom" name="objective{{i+1}}" id="objective{{i+1}}">
+                    </div>
+                    <div class="one wide field">
+                        <a (click)="onDelField(i)" *ngIf="i!==0" style="cursor: pointer;color: red">
+                            <i class="minus icon"></i> ลบ
+                        </a>
+                    </div>
+                </div>
 
-          </div>
-          <div class="two wide field "> </div>
-          <div class="three wide field ">
-            <label>ชื่อ :</label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="นายธิบดี วัฒนากุล">
-          </div>
-        </div>
+                <div class="inline fields">
+                    <div class="four wide field "></div>
+                    <i class="plus icon"></i>
+                    <div class="ten wide field ">
+                        <a (click)="onAddField()" style="cursor:  pointer;">เพิ่มวัตถุประสงค์</a>
+                    </div>
+                </div>
 
-        <div class="inline fields">
-          <div class="one wide field "></div>
-          <div class="three wide field ">
-            <label>เพิ่มวัตถุประสงค์ : </label>
-          </div>
-          <div class="three wide field ">
-          </div>
-          <div class="two wide field "> </div>
-          <div class="three wide field ">
-            <label>ชื่อ :</label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="นายธิบดี วัฒนากุล">
-          </div>
-        </div>
+                <div class="inline fields">
+                    <div class="one wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>ตัวชี้วัดหลัก : </label>
+                    </div>
+                    <div class="twelve wide field">
+                        <input type="text" placeholder="" class="custom" name="keyIndicators" id="keyIndicators" [(ngModel)]="keyIndicators">
+                    </div>
+                </div>
 
+                <div class="inline fields">
+                    <div class="one wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>ผู้จัดทำแผนงาน/โครงการ : </label>
+                    </div>
+                    <div class="twelve wide field">
+                        <input type="text" placeholder="" class="custom" name="planner" id="planner" [(ngModel)]="planner">
+                    </div>
+                </div>
 
-        <div class="inline fields">
-          <div class="one wide field "></div>
-          <div class="three wide field ">
-          </div>
-          <div class="three wide field ">
-          </div>
-          <div class="two wide field "> </div>
-          <div class="three wide field ">
-            <label>ตำแหน่ง:</label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="">
-          </div>
-        </div>
+                <div class="inline fields">
+                    <div class="one wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>ผู้รับผิดชอบหลัก :</label>
+                    </div>
+                    <div class="twelve wide field">
+                        <input type="text" placeholder="" class="custom" name="primaryResponse" id="primaryResponse" [(ngModel)]="primaryResponse">
+                    </div>
+                </div>
 
-        <div class="inline fields">
-          <div class="three wide field ">
-            <label>ตัวชี้วัดหลัก : </label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="จำนวนราย">
-          </div>
-          <div class="two wide field "> </div>
-          <div class="three wide field ">
-            <label>ระยะเวลาของแผนงานโครงการ : </label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="" value="1 ตุลาคม 2561 - 30 กันยายน 2561">
-          </div>
-        </div>
+                <div class="inline fields">
+                    <div class="one wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>ชื่อ :</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" placeholder="" class="custom" name="primaryName" id="primaryName" [(ngModel)]="primaryName">
+                    </div>
+                    <div class="one wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>ตำแหน่ง :</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" placeholder="" class="custom" name="primaryPosition" id="primaryPosition" [(ngModel)]="primaryPosition">
+                    </div>
+                </div>
 
-        <div class="inline fields">
-            <div class="three wide field ">
-              <label>ผู้จัดทำแผนงาน/โครงการ : </label>
+                <div class="inline fields">
+                    <div class="one wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>ผู้อนุมัติ :</label>
+                    </div>
+                    <div class="twelve wide field">
+                        <input type="text" placeholder="" class="custom" name="approver" id="approver" [(ngModel)]="approver">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="one wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>ชื่อ :</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" placeholder="" class="custom" name="approverName" id="approverName" [(ngModel)]="approverName">
+                    </div>
+                    <div class="one wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>ตำแหน่ง :</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" placeholder="" class="custom" name="approverPosition" id="approverPosition" [(ngModel)]="approverPosition">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="one wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>ตัวชี้วัดหลัก :</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" placeholder="" class="custom" name="" id="" [(ngModel)]="keyIndicators">
+                    </div>
+                    <div class="one wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>ผู้จัดทำแผนงาน/โครงการ :</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" placeholder="" class="custom" name="" id="" [(ngModel)]="planner">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="one wide field"> </div>
+                    <div class="three wide field required field">
+                        <label>ระยะเวลาของแผนงานโครงการ :</label>
+                    </div>
+                    <div class="ui calendar" id="calendar">
+                        <div class="ui input left icon ">
+                            <i class="time icon"></i>
+                            <input type="calendar" id="calendarraw" name="calendarraw" [attr.required]="true" autocomplete="off">
+                        </div>
+                    </div>
+                    <div class="two wide field "> </div>
+                    <div class="three wide field required field">
+                        <label>ถึง</label>
+                    </div>
+                    <div class="ui calendar" id="calendar1">
+                        <div class="ui input left icon">
+                            <i class="time icon"></i>
+                            <input type="calendar" id="calendar1raw" name="calendar1raw" [attr.required]="true" autocomplete="off">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="one wide field "> </div>
+                    <div class="three wide field ">
+                        <label>โทรศัพท์:</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" placeholder="" class="custom" name="phone" id="phone" maxlength="10" size="10"[(ngModel)]="phone">
+                    </div>
+                    <div class="eight wide field "> </div>
+                </div>
+
+                <div class="ui grid center aligned">
+                    <div class="sixteen wide column">
+                        <b>เนื้อหาแผนการตรวจปฏิบัติการ </b>
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="inline fields">
+                    <div class="four wide field "></div>
+                    <div class="eleven wide field">
+                        <textarea type="text" placeholder="" class="custom" name="planDetail" id="planDetail" [(ngModel)]="planDetail"></textarea>
+                    </div>
+                    <div class="four wide field "></div>
+                </div>
+
+                <div class="inline fields ui center aligned grid">
+                    <button class="ui mini primary button" (click)="saveOaOperPlan()">
+                        <i class="save icon"></i> บันทึก
+                    </button>
+                    <button  class="ui mini button" (click)="reset()">
+                        <i class="refresh icon"></i>
+                        ล้างข้อมูล
+                    </button>
+                </div>
             </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="จำนวนราย">
-            </div>          
-            <div class="two wide field "> </div>
-            <div class="three wide field ">
-              <label>โทรศัพท์: </label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="52513">
-            </div>
-          </div>
-          <div class="ui grid center aligned">
-              <div class="sixteen wide column">
-                <b>เนื้อหาแผนการตรวจปฏิบัติการ </b>	
-              </div>
-            </div>
-            <br>
-            
-          <div class="inline fields">
-              <div class="four wide field "></div>
-              <div class="eleven wide field">               
-                <textarea></textarea>
-              </div>
-              <div class="four wide field "></div>
-            </div>
-
-            <div class="inline fields ui center aligned grid">   
-                <button  class="ui mini primary button">แสดงตัวอย่าง</button> 
-                <button  class="ui mini primary button">
-                    <i class="save icon"></i> บันทึก                  
-                </button>               
-                <button class="ui mini button" >ยกเลิก</button>
-            </div>
-            </div>
-      </div>
+        </div>
     </div>
