--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-3/cop01-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-3/cop01-3.component.html
@@ -6,51 +6,29 @@
       <span>จัดทำแผนการตรวจปฏิบัติการ</span>
     </div>
 
-    <div class="ui attached segment">
-      <table class="ui small celled table" style="width: 100%">
-        <thead>
-          <tr style="text-align: center;">
-            <th rowspan="2">ลำดับที่</th>
-            <th rowspan="2">ปีงบประมาณ</th>
-            <th rowspan="2">วันที่จัดทำแผน</th>
-            <th rowspan="2">เรื่อง</th>
-            <th rowspan="2">แสดง</th>
 
-          </tr>
-        </thead>
-        <tr>
-          <td>1</td>
-          <td>2560</td>
-          <td>21-Jan-60</td>
-          <td style="text-align: center;">แผนการตรวจสอบภาษี ปีงบประมาณ 2560</td>
-
-          <td>
-            <button class="ui mini primary button">แสดงบันทึกข้อความ</button>
-          </td>
-        </tr>
-        <tr>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
-      </table>
+    <div class="ui segment">
+      <div class="ui grid">
+        <div class="sixteen wide column">
+          <table id="dataTable" style="width: 100%;" class="ui small collapsing celled table aligned hover">
+            <thead>
+              <tr>
+                <th style="text-align: center">ปีงบประมาณ</th>
+                <th style="text-align: center">วันที่จัดทำเเผน</th>
+                <th style="text-align: center">เรื่อง</th>
+                <th style="text-align: center">เเสดง</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    
+   
       <br>
+
+
       <div class="ui center aligned grid">
         <div class="sixteen wide column">
           <button class="ui mini primary button " routerLink="/cop01/2">
@@ -63,7 +41,7 @@
           </button>
         </div>
       </div>
-    </div>
+    
 
   </div>
 </div>
